# dinkelberg

./: .dockerignore  .env.dist  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: cache.rs  cli.rs  config.rs  ddg.rs  main.rs
src/commands/: health.rs  img.rs  mod.rs  reminders.rs  roll.rs  what.rs
