[package]
name = "dinkelberg"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_more = "0.99"
dotenv = "0.15"
envy = "0.4"
lazy_static = "1.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.11", features = ["json"] }
structopt = { version = "0.3", default-features = false }

# Cache
deadpool-redis = { version = "0.7",  default-features = false }
redis = { version = "0.20.0", features = ["tokio-comp"] }

# Tokio ecosystem
bytes = "1.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.11"

# Opentelemetry
opentelemetry = { version = "0.12", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.11"

# Serde
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"

# Bot stuff
teloxide = { version = "0.4", features = ["macros", "auto-send"]}

[profile.release]
lto = "thin"