[package]
name = "dinkelberg"
version = "0.1.0"
authors = ["Bart Willems <bwillems@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
derive_more = "0.99"
dotenv = "0.15"
envy = "0.4"
lazy_static = "1.4"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
structopt = { version = "0.3", default-features = false }

# Cache
deadpool-redis = { version = "0.8",  default-features = false }
redis = { version = "0.20", features = ["tokio-comp"] }

# Tokio ecosystem
bytes = "1.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
tracing-opentelemetry = "0.12"

# Opentelemetry
opentelemetry = { version = "0.13", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.12"

# Serde
serde = { version = "1.0" }
serde_derive = "1.0"
serde_json = "1.0"

# Bot stuff
teloxide = { version = "0.5", features = ["macros", "auto-send"]}

# Command requirements
# RemindMe
date_time_parser = "0.1.0"
# Roll
num_enum = "0.5"

[profile.release]
lto = "thin"